@@ -17,8 +17,8 @@ import org.testcontainers.containers.PostgreSQLContainer;
 import org.testcontainers.utility.DockerImageName;
 
 import java.sql.SQLException;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Stream;
 import javax.annotation.Nonnull;
 import javax.sql.DataSource;
@@ -32,9 +32,10 @@ final class PostgreSqlContainerWrapper implements AutoCloseable {
     PostgreSqlContainerWrapper(@Nonnull final List<Pair<String, String>> additionalParameters) {
         this.pgVersion = preparePostgresVersion();
         //noinspection resource
-        this.container = new PostgreSQLContainer<>(DockerImageName.parse("postgres").withTag(pgVersion))
+        this.container = new PostgreSQLContainer<>(DockerImageName.parse("postgres")
+                .withTag(pgVersion))
                 .withSharedMemorySize(MemoryUnit.MB.convertToBytes(512))
-                .withTmpFs(Collections.singletonMap("/var/lib/postgresql/data", "rw"))
+                .withTmpFs(Map.of("/var/lib/postgresql/data", "rw"))
                 .withCommand(prepareCommandParts(additionalParameters));
         this.container.start();
         this.dataSource = PostgreSqlDataSourceHelper.buildDataSource(container);
